// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > accessRequest > findAccessRequest > admin success 1`] = `
[
  {
    "_id": "a",
  },
  {
    "_id": "b",
  },
]
`;

exports[`services > accessRequest > getAccessRequestsByModel > good 1`] = `
[
  {
    "_id": "b",
  },
]
`;
